Refactored ppbgdi integration

--- a/packages/ppbgdi/data_stream/python_logs/agent/stream/stream.yml.hbs
+++ b/packages/ppbgdi/data_stream/python_logs/agent/stream/stream.yml.hbs
@@ -2,6 +2,8 @@ paths:
 {{#each paths as |path i|}}
   - {{path}}
 {{/each}}
+data_stream:
+  dataset: {{data_stream.dataset}}
 exclude_files: [".gz$"]
 processors:
   - add_locale: ~
